# audio_pattern_detector

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.test  Pipfile  README.md  audio_offset_finder.py  audio_offset_finder_v2.py  conftest.py  convert.py  database.py  docker-bake.hcl  download_podcasts.py  match.py  match2.py  match3.py  match4.py  match_all.py  match_directory.py  news_report_tone_detect_test.py  numpy_encoder.py  old_downsample_peak_logic.py  old_methods.py  old_peak_methods.py  peak_methods.py  process_timestamps.py  publish.py  pure_tone.py  pyproject.toml  pytest.ini  rclone.conf  run_all.py  run_all.sh  schedule.py  scrape.py  scrape_rthk.py  scrape_single_intro.py  scrape_standard.py  scrape_utils.py  (+18 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-pages.yml  native-helper-release.yml  python-app.yml  release.yml
ai_chats/: python.md
archive/: audio_offset_finder.py  old_methods.py
archive/old_tests/: test_upload.py
audio_offset_finder/: audio_offset_finder_v2.py  audio_utils.py
audio_offset_finder_v2/: audio_offset_finder_v2.py  audio_utils.py  detection_utils.py
audio_pattern_detector/: audio_clip.py  audio_pattern_detector.py  audio_utils.py  cli.py  convert.py  detection_utils.py  loudness.py  match.py  numpy_encoder.py  pattern_config.py  peak_methods.py
database/: database.py
docs/: denoise-strategy.md  development.md  native-helper.md  pattern-matching.md  stdin-modes.md
file_upload/: upload_utils.py  upload_utils2.py
good_results/beep/: KnowledgeCo20241102_trimmed.txt
good_results/programsponsoredby/: 日落大道20240529_1600_s_1.json
good_results/programsponsoredby2/: 日落大道20240529_1600_s_1.json
good_results/programsponsoredby3/: 日落大道20240529_1600_s_1.json
good_results/programsponsoredby4/: 日落大道20240529_1600_s_1.json
good_results/rthk_news_report_theme/: KnowledgeCo20240518.json
good_results/受之有道outro/: 受之有道20240520_1800_s_1.json
good_results/日落大道interlude/: 日落大道20240523_1600_s_1.json
good_results/日落大道smallinterlude/: 日落大道20240523_1600_s_1.json
good_results/法律天地intro/: 法律天地20240518_1230_s_1.json
good_results/漫談法律intro/: 漫談法律20240519_1000_s_1.json
good_results/繼續有心人intro/: 繼續有心人friday20240510_1200_s_1.json
good_results/置業興家intro/: 置業興家20240518_1330_s_1.json
native-helper/: Cargo.toml  native_helper.pyi  pyproject.toml
native-helper/scripts/: compare_find_peaks.py  compare_loudness.py
native-helper/src/: lib.rs  python.rs
native-helper/tests/: test_python_bindings.py
native_helper/: __init__.py
old_tests/: test1.py  test2.py  test_duration_and_gaps.py  test_timestamp.py
peak-finder/: Cargo.toml  pyproject.toml
peak-finder/.github/workflows/: ci.yml  release.yml
peak-finder/src/: lib.rs  python.rs
peak-finder/tests/: test_python_bindings.py
sample_audios/clips/: 881_beep.apd.toml  881_beep_base64.apd.toml  903_beep.apd.toml  rthk_beep.apd  rthk_beep.apd.toml
samples/: KnowledgeCo20240420.m4a.json  KnowledgeCo20240420.m4a.separated.json  KnowledgeCo20240427.m4a.json  KnowledgeCo20240427.m4a.separated.json  happydaily20240422.m4a.json  happydaily20240422.m4a.separated.json  happydaily20240423.m4a.json  happydaily20240423.m4a.separated.json  happydaily20240424.m4a.json  happydaily20240424.m4a.separated.json  happydaily20240425.m4a.json  happydaily20240425.m4a.separated.json  happydaily20240426.m4a.json  happydaily20240426.m4a.separated.json  happydaily20240429.m4a.json  happydaily20240429.m4a.separated.json  happydailytest2.txt  healthpedia20240422.m4a.json  healthpedia20240422.m4a.separated.json  healthpedia20240423.m4a.json  healthpedia20240423.m4a.separated.json  healthpedia20240424.m4a.json  healthpedia20240424.m4a.separated.json  healthpedia20240425.m4a.json  healthpedia20240425.m4a.separated.json  healthpedia20240426.m4a.json  healthpedia20240426.m4a.separated.json  healthpedia20240429.m4a.json  healthpedia20240429.m4a.separated.json
scripts/: match_all.py  release.py  trim_shows_881.py
stubs/matplotlib/: __init__.pyi
tests/: test_absorb_fake_news.py  test_audio_utils.py  test_backup_intros.py  test_build_time_sequence.py  test_cli_integration.py  test_consolidate_beeps.py  test_consolidate_intros.py  test_detector_api.py  test_duration_and_gaps.py  test_duration_and_gaps_rthk_with_paddings.py  test_fill_missing_short_gaps.py  test_get_sec.py  test_integration_matching.py  test_marker_tone_verification.py  test_match_directory.py  test_near.py  test_news_report_cut_off.py  test_pad_news_report.py  test_pattern_config.py  test_peak_methods.py  test_process_beginning_end.py  test_process_single_intro.py  test_pure_tone_verification.py  test_real_data_regressions.py  test_remove_start_end.py  test_remove_start_end_the_same.py  test_short_clip.py  test_slicing.py  test_sliding_window.py  test_time_sequences_no_padding.py  test_time_sequences_rthk_no_padding.py  test_time_sequences_with_paddings.py  test_timestamp.py  test_timestamp_sanity_check.py  test_timestamp_sanity_check_rthk.py  test_unique_and_sorted.py  test_with_paddings.py
typings/matplotlib/: pyplot.pyi
typings/native_helper/: __init__.pyi
