[project]
name = "audio-pattern-detector"
version = "0.2.24"
description = ""
authors = [{ name = "Andrew Chen", email = "hello@andrewtheguy.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "fft-correlation==0.0.4",
    "numpy>=1.26.4,<2",
]

[project.optional-dependencies]
debug = [
    "matplotlib>=3.9.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "ruff>=0.14.6",
    "basedpyright>=1.29.0",
    "pyloudnorm>=0.1.1,<0.2.0",
]

[project.scripts]
audio-pattern-detector = "audio_pattern_detector.cli:main"

[tool.pytest.ini_options]

[tool.pyright]
#stubPath = "typings"
exclude = [".venv", "build", "dist", ".git", "tests", "native-helper"]
reportUnknownParameterType = true
reportUninitializedInstanceVariable = true
# Disable basedpyright-specific strict rules
reportMissingTypeStubs = false
reportExplicitAny = false
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedCallResult = false
reportImplicitOverride = false

[[tool.uv.index]]
name = "fft-correlation"
url = "https://andrewtheguy.github.io/fft-correlation/simple/"
explicit = true

[tool.uv.sources]
native-helper = { path = "native-helper", editable = true }
fft-correlation = { index = "fft-correlation" }

[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "native-helper/Cargo.toml"
features = ["python"]
python-packages = ["audio_pattern_detector"]
