[package]
name = "native-helper"
version = "0.3.2"
edition = "2021"

[lib]
name = "native_helper"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module", "dep:numpy"]

[dependencies]
rustfft = "6.4"
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py39"] }
numpy = { version = "0.27.1", optional = true }
