[package]
name = "native-helper"
version = "0.0.0"
edition = "2021"

[lib]
name = "native_helper"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = [
    "dep:pyo3",
    "pyo3/extension-module",
    "pyo3/generate-import-lib",
    "dep:numpy",
]

[dependencies]
rustfft = "6.4"
pyo3 = { version = "0.28", optional = true, features = ["abi3-py39"] }
numpy = { version = "0.28", optional = true }
