[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "native-helper"
version = "0.2.19"
description = "Native Rust helper functions for audio-pattern-detector"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[dependency-groups]
dev = ["scipy>=1.16,<2", "pyloudnorm>=0.1.1,<0.2.0"]

[tool.maturin]
features = ["python"]
