[package]
name = "peak-finder"
version = "0.0.1"
edition = "2021"

[lib]
name = "peak_finder"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py39"] }
numpy = { version = "0.27.1", optional = true }
