[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "peak-finder"
version = "0.0.1"
description = "PyO3 bindings for 1D peak finding (scipy.signal.find_peaks replacement)"
requires-python = ">=3.9"
dependencies = ["numpy>=1.26"]

[tool.maturin]
features = ["python"]
